codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
" Analyzing (0s • Esc 中断)                                                      " Hidden by multi-width symbols: [(22, " "), (24, " ")]
"                                                                                "
"▌ Ask Codex to do anything                                                      "
" ⏎ 发送   ⌃J 换行   ⌃T 对话记录   ⌃C 退出                                       " Hidden by multi-width symbols: [(4, " "), (6, " "), (14, " "), (16, " "), (24, " "), (26, " "), (28, " "), (30, " "), (38, " "), (40, " ")]
"                                                                                "
